unpackaged/main/default/objects/Order_Header__c/Order_Header__c.object-meta.xml
<CustomObject>
    <description>SOP database orders migrated into this custom object.</description>
    <label>Order Header</label>
    <nameField>
        <displayFormat>OH-{00000000}</displayFormat>
        <label>Order Header Record Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Headers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>