unpackaged/main/default/objects/Order_Header__c/fields/BillingContactID__c.field-meta.xml
<CustomField>
    <fullName>BillingContactID__c</fullName>
    <description>SOP Field to identify the Billing Contact record -  BillingContactID</description>
    <label>SOP BillingContactID</label>
    <length>8</length>
    <type>Text</type>
</CustomField>