unpackaged/main/default/objects/Order_Header__c/fields/BillingContactName__c.field-meta.xml
<CustomField>
    <fullName>BillingContactName__c</fullName>
    <description>Original SOP Field to capture the Billing contact name if there is not a corresponding contact record.</description>
    <label>Billing Contact Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>