unpackaged/main/default/objects/Order_Header__c/fields/CatalogueID__c.field-meta.xml
<CustomField>
    <fullName>CatalogueID__c</fullName>
    <description>SOP field. Validation rule to enforce integers only.</description>
    <label>SOP CatalogueID</label>
    <length>5</length>
    <type>Text</type>
</CustomField>