unpackaged/main/default/objects/Order_Header__c/fields/ContactID__c.field-meta.xml
<CustomField>
    <fullName>ContactID__c</fullName>
    <description>SOP Field to identify the primary contact record -  ContactID</description>
    <label>SOP ContactID</label>
    <length>8</length>
    <type>Text</type>
</CustomField>