unpackaged/main/default/objects/Order_Header__c/fields/DiscountPercentage__c.field-meta.xml
<CustomField>
    <fullName>DiscountPercentage__c</fullName>
    <description>SOP Field - DiscountPercentage</description>
    <label>Discount Percentage</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>