unpackaged/main/default/objects/Order_Header__c/fields/GoodsAmount__c.field-meta.xml
<CustomField>
    <fullName>GoodsAmount__c</fullName>
    <description>SOP Field - GoodsAmount</description>
    <label>Goods Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>