unpackaged/main/default/objects/Order_Header__c/fields/InvoiceNumber__c.field-meta.xml
<CustomField>
    <fullName>InvoiceNumber__c</fullName>
    <description>Original SOP field. Replace with a lookup field to a new custom object for a SOP &quot;Invoice&quot; if needed.</description>
    <label>Invoice Number</label>
    <length>6</length>
    <type>Text</type>
</CustomField>