unpackaged/main/default/objects/Order_Header__c/fields/InvoiceType__c.field-meta.xml
<CustomField>
    <fullName>InvoiceType__c</fullName>
    <description>SOP Field - InvoiceType</description>
    <label>Invoice Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>INVOICE</fullName>
            </value>
            <value>
                <fullName>CREDIT NOTE</fullName>
            </value>
            <value>
                <fullName>RESERVE</fullName>
            </value>
            <value>
                <fullName>QUOTE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>