unpackaged/main/default/objects/Order_Header__c/fields/Is_Current_Version_Of_Invoice_Or_Credit__c.field-meta.xml
<CustomField>
    <fullName>Is_Current_Version_Of_Invoice_Or_Credit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Identifies if the invoice / credit is the latest version of the invoice / credit.</description>
    <inlineHelpText>Identifies if the invoice / credit is the latest version of the invoice / credit.</inlineHelpText>
    <label>Is Current Version Of Invoice Or Credit</label>
    <type>Checkbox</type>
</CustomField>