unpackaged/main/default/objects/Order_Header__c/fields/IsLatestVersionOfInvoice__c.field-meta.xml
<CustomField>
    <fullName>IsLatestVersionOfInvoice__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Identifies if the invoice (excluding credits) is the latest version of the invoice. Each amendment creates an new invoice version with only the details of the amendment</description>
    <inlineHelpText>Identifies if the invoice (excluding credits) is the latest version of the invoice.</inlineHelpText>
    <label>Is Latest Version Of Invoice</label>
    <type>Checkbox</type>
</CustomField>