unpackaged/main/default/objects/Order_Header__c/fields/IsRevised__c.field-meta.xml
<CustomField>
    <fullName>IsRevised__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SOP Field, IsRevised</description>
    <label>Revised</label>
    <type>Checkbox</type>
</CustomField>