unpackaged/main/default/objects/Order_Header__c/fields/OnHold__c.field-meta.xml
<CustomField>
    <fullName>OnHold__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SOP Field - OnHold</description>
    <label>On Hold</label>
    <type>Checkbox</type>
</CustomField>