unpackaged/main/default/objects/Order_Header__c/fields/Ordered_Services__c.field-meta.xml
<CustomField>
    <fullName>Ordered_Services__c</fullName>
    <description>A comma separated list of services on the order.  Set by a process builder where the Invoice Type is INVOICE</description>
    <label>Ordered Services</label>
    <length>100</length>
    <type>Text</type>
</CustomField>