unpackaged/main/default/objects/Order_Header__c/fields/OrderType__c.field-meta.xml
<CustomField>
    <fullName>OrderType__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SOP Field - OrderType</description>
    <label>Onsite Order</label>
    <type>Checkbox</type>
</CustomField>