unpackaged/main/default/objects/Order_Header__c/fields/SecondaryCurrency__c.field-meta.xml
<CustomField>
    <fullName>SecondaryCurrency__c</fullName>
    <description>SOP Field - SecondaryCurrency</description>
    <label>SOP Secondary Currency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AED</fullName>
            </value>
            <value>
                <fullName>EUR</fullName>
            </value>
            <value>
                <fullName>GPB</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>