unpackaged/main/default/objects/Order_Header__c/fields/SOP_Date_Created__c.field-meta.xml
<CustomField>
    <fullName>SOP_Date_Created__c</fullName>
    <description>Original created date within SOP Database.</description>
    <inlineHelpText>Original created date within SOP Database.</inlineHelpText>
    <label>SOP Date Created</label>
    <type>DateTime</type>
</CustomField>