unpackaged/main/default/objects/Order_Header__c/fields/SOP_Date_Updated__c.field-meta.xml
<CustomField>
    <fullName>SOP_Date_Updated__c</fullName>
    <label>SOP Date Updated</label>
    <type>DateTime</type>
</CustomField>