unpackaged/main/default/objects/Order_Header__c/fields/SurchargeAmount__c.field-meta.xml
<CustomField>
    <fullName>SurchargeAmount__c</fullName>
    <description>SOP Field - SurchargeAmount</description>
    <label>Surcharge Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>