unpackaged/main/default/objects/Order_Header__c/fields/UserID__c.field-meta.xml
<CustomField>
    <fullName>UserID__c</fullName>
    <description>Original SOP Order owner/creator. 
Imported from SOP database.</description>
    <label>SOP UserID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>