unpackaged/main/default/objects/Order_Header__c/fields/VersionNumber__c.field-meta.xml
<CustomField>
    <fullName>VersionNumber__c</fullName>
    <defaultValue>0</defaultValue>
    <description>SOP field - VersionNumber. IF SFDC replaces SOP, configure automation to update this field.</description>
    <label>SOP Version Number</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>