unpackaged/main/default/objects/Order_Header__c/validationRules/Enforce_CatalogueID_Integers_Only.validationRule-meta.xml
<ValidationRule>
    <fullName>Enforce_CatalogueID_Integers_Only</fullName>
    <active>true</active>
    <description>CatalgueID cannot contain text characters; integers only.</description>
    <errorConditionFormula>NOT(ISNUMBER(  CatalogueID__c  ))&amp;&amp;

NOT(ISBLANK(CatalogueID__c))</errorConditionFormula>
    <errorMessage>Order CatalogueID cannot contain text characters; integers only.</errorMessage>
</ValidationRule>