unpackaged/main/default/objects/Order_Header__c/validationRules/Enforce_Invoice_Number_Integers_Only.validationRule-meta.xml
<ValidationRule>
    <fullName>Enforce_Invoice_Number_Integers_Only</fullName>
    <active>true</active>
    <description>Order Invoice Number cannot contain text characters; integers only.</description>
    <errorConditionFormula>NOT(ISNUMBER(  InvoiceNumber__c  ))&amp;&amp;

NOT(ISBLANK(InvoiceNumber__c))</errorConditionFormula>
    <errorMessage>Order Invoice Number cannot contain text characters; integers only.</errorMessage>
</ValidationRule>