unpackaged/main/default/objects/Order_Header__c/validationRules/Enforce_SOP_OrderID_Integers_Only.validationRule-meta.xml
<ValidationRule>
    <fullName>Enforce_SOP_OrderID_Integers_Only</fullName>
    <active>true</active>
    <description>Prohibits character text values from being included within OrderID</description>
    <errorConditionFormula>NOT(ISNUMBER( OrderID__c ))&amp;&amp;

NOT(ISBLANK(OrderID__c))</errorConditionFormula>
    <errorMessage>OrderID cannot contain text characters; integers only.</errorMessage>
</ValidationRule>