unpackaged/main/default/objects/Order_Header__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SFOrderForAccountID__c</columns>
    <columns>SFBillingContactID__c</columns>
    <columns>CatalogueName__c</columns>
    <columns>InvoiceNumber__c</columns>
    <columns>InvoiceType__c</columns>
    <columns>JobReference__c</columns>
    <columns>EventID__c</columns>
    <columns>StandNumber__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>