unpackaged/main/default/objects/Order_Header__c/listViews/Orders_Created_Today.listView-meta.xml
<ListView>
    <fullName>Orders_Created_Today</fullName>
    <columns>NAME</columns>
    <columns>OrderID__c</columns>
    <columns>Instance__c</columns>
    <columns>SFOrderForAccountID__c</columns>
    <columns>Exhibition_Opportunity__c</columns>
    <columns>TotalValue__c</columns>
    <columns>BillingContactName__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Orders Created Today</label>
    <language>en_US</language>
</ListView>